--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="css/styles.css" type="text/css" rel="stylesheet" />
-    <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="/favicon_io/favicon.ico" />
+    <title>MyCalc</title>
   </head>
   <body>
+    <div class="header">
+      <h1>MyCalc</h1>
+    </div>
     <div class="shape">
       <div id="draggable" class="calculator-form">
         <div class="s2"></div>
