--- a/index.html
+++ b/index.html
@@ -128,10 +128,16 @@
             <span class="timer"></span>
           </p>
           <div class="hidden question-container">
-            <p class="question-container__question">Question 1:</p>
-            <span class="questions">2 x 2 - 3 / 4</span>
-            <p class="question-container__answer">Answer 1:</p>
+            <span class="alert hidden">Correct</span>
+            <p class="question-container__question">
+              Question<span class="level"></span>:
+            </p>
+            <span class="questions cp2"><span class="level"></span>:</span>
+            <p class="question-container__answer">
+              Answer<span class="level"></span>:
+            </p>
             <input
+              class="cp2"
               type="text"
               name="answer"
               placeholder="Enter your answer"
